--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,6 @@ header {
     position:relative;
 }
   
-/* #stateResults {
-    width: 40%;
-    font: 12px/16px 'Open Sans', Helvetica, Arial, sans-serif;
-    color: #454545;
-    position: relative;
-    bottom: 10; 
-} */
 #stateResults {
     width: 40%;
     position: absolute;
@@ -72,11 +65,27 @@ th, td {
 }
 
 .name-1 {
-    background-color: rgb(107, 42, 30);
+    background-color: rgb(184, 18, 18);
     color: white;
 }
 .name-2 {
-    background-color: rgb(40, 122, 155);
+    background-color: rgb(36, 35, 35);
+    color: white;
+}
+.name-3 {
+    background-color: rgb(17, 112, 202);
+    color: white;
+}
+.name-4 {
+    background-color: rgba(40, 155, 126, 0.925);
+    color: white;
+}
+.name-5 {
+    background-color: rgb(218, 145, 10);
+    color: white;
+}
+.name-6 {
+    background-color: rgb(8, 59, 13);
     color: white;
 }
 
